--- a/.gitignore
+++ b/.gitignore
@@ -28,6 +28,7 @@
 !/public/themes/alternate
 !/public/themes/classic
 !/public/themes/README
+!/public/themes/circle
 /tmp/*
 /tmp/cache/*
 /tmp/pdf/*
